--- a/app/assets/stylesheets/styles.css.scss
+++ b/app/assets/stylesheets/styles.css.scss
@@ -581,7 +581,8 @@ Hero
     position: relative;
     padding: 60px 0 60px 0;
     min-height: 800px;
-    background: rgb(40, 70, 102) url('./hero-01.jpg') no-repeat center center;
+    background: rgb(40, 70, 102) no-repeat center center;
+    background-image:image-url('hero-01.jpg'); 
     background-size: cover;
     color: #fff;
 }
