--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -9,44 +9,46 @@
 				<div class="container">
 					<div class="row nav-wrapper">
 						<div class="col-md-6 col-sm-6 col-xs-6 text-left">
-							<div class="main-logo">
-							<%= link_to root_path do %>
-								<%= image_tag "climbcard-white-logo.png", class: "img-responsive", alt: "Boxify Logo" %>
-							<% end %>
+								<div class="main-logo">
+								<%= link_to root_path do %>
+									<%= image_tag "climbcard-white-logo.png", class: "img-responsive", alt: "Boxify Logo" %>
+								<% end %>
+							</div>
 						</div>
-						</div>
-						<div class="col-md-6 col-sm-6 col-xs-6 text-right navicon">
+						<!-- <div class="col-md-6 col-sm-6 col-xs-6 text-right navicon">
 							<p>MENU</p><a id="trigger-overlay" class="nav_slide_button nav-toggle" href="#"><span></span></a>
-						</div>
+						</div> -->
 					</div>
 					<div class="row hero-content">
 						<div class="col-md-12">
 							<h1 class="animated fadeInDown text-center">Hundreds of routes. One membership.</h1>
 							
-			<!-- Begin MailChimp Signup Form -->
-	<div id="mc_embed_signup">
-		<form action="//climbcard.us12.list-manage.com/subscribe/post?u=62b58dfeef74782cefec4dfcc&amp;id=894976712f" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate text-center" target="_blank" novalidate>
-		    <div id="mc_embed_signup_scroll">
 
-		<div class="mc-field-group">
-			<input type="email" value="" name="EMAIL" class="required email form-control animated fadeInUp" id="mce-EMAIL" placeholder="Enter email">
-		</div>
-		<div class="mc-field-group">
-			<input type="text" value="" name="PCODE" class="required postalCode form-control animated fadeInUp" id="mce-PCODE" placeholder="Postal Code">
-		</div>
-			<div id="mce-responses" class="clear">
-				<div class="response" id="mce-error-response" style="display:none"></div>
-				<div class="response" id="mce-success-response" style="display:none"></div>
-			</div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-		    <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_62b58dfeef74782cefec4dfcc_894976712f" tabindex="-1" value=""></div>
-		    <div class="clear subscribe-button">
-		    	<input type="submit" value="Notify Me" name="Notify Me" id="mc-embedded-subscribe" class="button submit-to-mailchimp animated fadeInUp">
-		    </div>
-		    </div>
-		</form>
-	</div>
+<!-- Begin MailChimp Signup Form -->
 
+<div id="mc_embed_signup">
+<form action="//climbcard.us12.list-manage.com/subscribe/post?u=62b58dfeef74782cefec4dfcc&amp;id=894976712f" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate text-center" target="_blank" novalidate>
+    <div id="mc_embed_signup_scroll">
+	
+<div class="mc-field-group">
+	<input type="email" value="" name="EMAIL" class="required email form-control animated fadeInUp" id="mce-EMAIL" placeholder="Enter Email">
+</div>
+<div class="mc-field-group">
+	<input type="text" value="" name="PCODE" class="required postalCode form-control animated fadeInUp" id="mce-PCODE" placeholder="Postal Code">
+</div>
+
+    <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_62b58dfeef74782cefec4dfcc_894976712f" tabindex="-1" value=""></div>
+    <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button submit-to-mailchimp animated fadeInUp"></div>
+    </div>
+    	<div id="mce-responses" class="clear">
+		<div class="response" id="mce-error-response" style="display:none"></div>
+		<div class="response" id="mce-success-response" style="display:none"></div>
+	</div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+</form>
+</div>
+<script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script><script type='text/javascript'>(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';fnames[2]='PCODE';ftypes[2]='text';}(jQuery));var $mcj = jQuery.noConflict(true);</script>
 <!--End mc_embed_signup-->
+
 
 							<!-- <a href="http://tympanus.net/codrops/?p=22554" class="use-btn animated fadeInUp">Use it for free</a> <a href="#about" class="learn-btn animated fadeInUp">Learn more <i class="fa fa-arrow-down"></i></a> -->
 						</div>
@@ -55,8 +57,74 @@
 			</section>
 		</header>
 
+		<!-- Description of Climbcard -->
+		<section class="climbcard-intro">
+			<div class="container">
+				<div class="row">
+					<div class="col-md-12">
+						<h1>What is ClimbCard?</h1>
+						<p>Launching summer 2016, ClimbCard is a membership that gives you unlimited access to Toronto's best indoor climbing gyms.</p>
+					</div>
+				</div>
+			</div>
+		</section>
 
-		<section class="video" id="about">
+
+		<section class="features-list" id="features">
+			<div class="container">
+				<div class="row">
+						<div class="col-md-6 feature-1 wp2">
+							<div class="text-center">
+								<div class="feature-icon">
+									<i class="fa fa-heart-o"></i>
+								</div>
+							</div>
+							<div class="feature-content text-center">
+								<h1>Unlimited Access</h1>
+								<p>ClimbCard gives you unlimited access to explore all of our partnered gyms, each with their own unique climbing experience.</p>
+							</div>
+						</div>
+						<div class="col-md-6 feature-2 wp2 delay-05s">
+							<div class="text-center">
+								<div class="feature-icon">
+									<i class="fa fa-star-o"></i>
+								</div>
+							</div>
+							<div class="feature-content text-center">
+								<h1>Challenge yourself</h1>
+								<p>Already mastered one gym? ClimbCard ensures you will always have a new routes to climb.</p>
+							</div>
+						</div>
+					</div>
+					<div class="row">
+						<div class="col-md-6 feature-3 wp2 delay-1s">
+							<div class="text-center">
+								<div class="feature-icon">
+									<i class="fa fa-credit-card"></i>
+								</div>
+							</div>
+							<div class="feature-content text-center">
+								<h1>One flat Fee</h1>
+								<p>Pay month-to-month and cancel anytime or you can put your membership on hold if an unforseen circumstance arises.</p>
+							</div>
+						</div>
+						<div class="col-md-6 feature-3 wp2 delay-1s">
+							<div class="text-center">
+								<div class="feature-icon">
+									<i class="fa fa-line-chart"></i>
+								</div>
+							</div>
+							<div class="feature-content text-center">
+								<h1>Fitness Benefits</h1>
+								<p>Pay month-to-month and cancel anytime or you can put your membership on hold if an unforseen circumstance arises.</p>
+							</div>
+						</div>
+					</div>
+			</div>
+		</section>
+
+
+		<!-- <section class="video" id="about">
 			<div class="container">
 				<div class="row">
 					<div class="col-md-12 text-center">
@@ -64,15 +132,15 @@
 					</div>
 				</div>
 			</div>
-		</section>
-		<section class="features-intro">
+		</section> -->
+<!-- 		<section class="features-intro">
 			<div class="container-fluid">
 				<div class="row">
 					<div class="col-md-6 nopadding features-intro-img">
 						<div class="features-bg">
 							<div class="texture-overlay"></div>
 							<div class="features-img wp1">
-								<%= image_tag "html5-logo.png", alt: "HTML5 Logo" %>
+								<- %= image_tag "html5-logo.png", alt: "HTML5 Logo" %>
 							</div>
 						</div>
 					</div>
@@ -99,47 +167,8 @@
 					</div>
 				</div>
 			</div>
-		</section>
-		<section class="features-list" id="features">
-			<div class="container">
-				<div class="row">
-					<div class="col-md-12">
+		</section> -->
 
-						<div class="col-md-4 feature-1 wp2">
-							<div class="feature-icon">
-								<i class="fa fa-heart-o"></i>
-							</div>
-							<div class="feature-content">
-								<h1>Unlimited Access</h1>
-								<p>ClimbCard gives you unlimited access to explore all of our partnered gyms, each with their own unique climbing experience.</p>
-								<a href="http://tympanus.net/codrops/?p=22554" class="read-more-btn">Read More <i class="fa fa-chevron-circle-right"></i></a>
-							</div>
-						</div>
-						<div class="col-md-4 feature-2 wp2 delay-05s">
-							<div class="feature-icon">
-								<i class="fa fa-star-o"></i>
-							</div>
-							<div class="feature-content">
-								<h1>Challenge yourself</h1>
-								<p>Already mastered one gym? ClimbCard ensures you will always have a new routes to climb.</p>
-								<a href="http://tympanus.net/codrops/?p=22554" class="read-more-btn">Read More <i class="fa fa-chevron-circle-right"></i></a>
-							</div>
-						</div>
-						<div class="col-md-4 feature-3 wp2 delay-1s">
-							<div class="feature-icon">
-								<i class="fa fa-credit-card"></i>
-							</div>
-							<div class="feature-content">
-								<h1>One flat Fee</h1>
-								<p>Pay month-to-month and cancel anytime or you can put your membership on hold if an unforseen circumstance arises.</p>
-								<a href="http://tympanus.net/codrops/?p=22554" class="read-more-btn">Read More <i class="fa fa-chevron-circle-right"></i></a>
-							</div>
-						</div>
-
-					</div>
-				</div>
-			</div>
-		</section>
 		<section class="showcase">
 			<div class="showcase-wrap">
 				<div class="texture-overlay"></div>
@@ -185,24 +214,14 @@
 			</div>
 		</section>
 
-		<section class="screenshots-intro">
-			<div class="container">
-				<div class="row">
-					<div class="col-md-12">
-						<h1>Packed Full of Powerful Features</h1>
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed a lorem quis neque interdum consequat ut sed sem. Duis quis tempor nunc. Interdum et malesuada fames ac ante ipsum primis in faucibus.</p>
-						<p><a href="#screenshots" class="arrow-btn">See the screenshots! <i class="fa fa-long-arrow-right"></i></a></p>
-					</div>
-				</div>
-			</div>
-		</section>
-		<section class="screenshots" id="screenshots">
+
+<!-- 		<section class="screenshots" id="screenshots">
 			<div class="container-fluid">
 				<div class="row">
 					<ul class="grid">
 						<li>
 							<figure>
-								<%= image_tag "01-screenshot.jpg", alt: "Screenshot 01" %>
+								< - %= image_tag "01-screenshot.jpg", alt: "Screenshot 01" %>
 								<figcaption>
 								<div class="caption-content">
 									<a href="img/large/01.jpg" class="single_image">
@@ -215,7 +234,7 @@
 						</li>
 						<li>
 							<figure>
-								<%= image_tag "02-screenshot.jpg", alt: "Screenshot 02" %>
+								< - %= image_tag "02-screenshot.jpg", alt: "Screenshot 02" %>
 								<figcaption>
 								<div class="caption-content">
 									<a href="img/large/02.jpg" class="single_image">
@@ -228,7 +247,7 @@
 						</li>
 						<li>
 							<figure>
-								<%= image_tag "03-screenshot.jpg", alt: "Screenshot 03" %>
+								< - %= image_tag "03-screenshot.jpg", alt: "Screenshot 03" %>
 								<figcaption>
 								<div class="caption-content">
 									<a href="img/large/03.jpg" class="single_image">
@@ -241,7 +260,7 @@
 						</li>
 						<li>
 							<figure>
-								<%= image_tag "04-screenshot.jpg", alt: "Screenshot 04" %>
+								< - %= image_tag "04-screenshot.jpg", alt: "Screenshot 04" %>
 								<figcaption>
 								<div class="caption-content">
 									<a href="img/large/04.jpg" class="single_image">
@@ -258,7 +277,7 @@
 					<ul class="grid">
 						<li>
 							<figure>
-								<%= image_tag "05-screenshot.jpg", alt: "Screenshot 05" %>
+								< - %= image_tag "05-screenshot.jpg", alt: "Screenshot 05" %>
 								<figcaption>
 								<div class="caption-content">
 									<a href="img/large/05.jpg" class="single_image">
@@ -271,7 +290,7 @@
 						</li>
 						<li>
 							<figure>
-								<%= image_tag "06-screenshot.jpg", alt: "Screenshot 06" %>
+								< - %= image_tag "06-screenshot.jpg", alt: "Screenshot 06" %>
 								<figcaption>
 								<div class="caption-content">
 									<a href="img/large/06.jpg" class="single_image">
@@ -284,7 +303,7 @@
 						</li>
 						<li>
 							<figure>
-								<%= image_tag "07-screenshot.jpg", alt: "Screenshot 07" %>
+								< - %= image_tag "07-screenshot.jpg", alt: "Screenshot 07" %>
 								<figcaption>
 								<div class="caption-content">
 									<a href="img/large/07.jpg" class="single_image">
@@ -297,7 +316,7 @@
 						</li>
 						<li>
 							<figure>
-								<%= image_tag "08-screenshot.jpg", alt: "Screenshot 08" %>
+								< - %= image_tag "08-screenshot.jpg", alt: "Screenshot 08" %>
 								<figcaption>
 								<div class="caption-content">
 									<a href="img/large/08.jpg" class="single_image">
@@ -311,13 +330,27 @@
 					</ul>
 				</div>
 			</div>
-		</section>
+		</section> -->
 		<section class="download" id="download">
 			<div class="container">
 				<div class="row">
-					<div class="col-md-12 text-center wp4">
-						<h1>Seen Enough?</h1>
-						<a href="http://tympanus.net/codrops/?p=22554" class="download-btn">Download! <i class="fa fa-download"></i></a>
+					<div class="col-md-6">
+						<h1>Are there any restrictions as to when I can climb?</h1>
+						<p>With ClimbCard, you can climb at any of our partner gyms with no restrictions. Regardless of if you prefer to climb morning, afternoon or night, ClimbCard gives you full access to your favourite climbing gyms.</p>
+					</div>
+					<div class="col-md-6">
+						<h1>Can I boulder, top-rope and lead climb?</h1>
+						<p>Absolutely! All of the the ClimbCard partner gyms have a variety of walls sure to challenge climbers of every skill-set. Belay tests may be required to climb on some walls.</p>
+					</div>
+				</div>
+				<div class="row">
+					<div class="col-md-6">
+						<h1>Does this include rental equipment?</h1>
+						<p>No, rental equipment is not included in the membership. In order to get started we recommend purchasing a harness, climbing shoes and a chalk bag.</p>
+					</div>
+					<div class="col-md-6">
+						<h1>Does this include rental equipment?</h1>
+						<p>Certainly! We understand that you may need to take a break. Simply put your membership on hold and resume once you’re ready.</p>
 					</div>
 				</div>
 			</div>
@@ -327,16 +360,14 @@
 				<div class="row">
 					<div class="col-md-5">
 						<h1 class="footer-logo">
-							<%= image_tag "logo-blue.png", alt: "Footer Logo Blue" %>
+							<%= image_tag "start-your-climb.png", class: "img-responsive", alt: "Start your climb" %>
 						</h1>
-						<p>© Boxify 2015 - <a href="http://tympanus.net/codrops/licensing/">Licence</a> - Designed &amp; Developed by <a href="http://www.peterfinlan.com/">Peter Finlan</a></p>
 					</div>
 					<div class="col-md-7">
 						<ul class="footer-nav">
-							<li><a href="#about">About</a></li>
-							<li><a href="#features">Features</a></li>
-							<li><a href="#screenshots">Screenshots</a></li>
-							<li><a href="#download">Download</a></li>
+							<li><a href="#about">Home</a></li>
+							<li><a href="#features">Partner</a></li>
+							<li><a href="#screenshots">Contact Us</a></li>
 						</ul>
 					</div>
 				</div>
