--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -15,14 +15,17 @@
 								<% end %>
 							</div>
 						</div>
-						<!-- <div class="col-md-6 col-sm-6 col-xs-6 text-right navicon">
-							<p>MENU</p><a id="trigger-overlay" class="nav_slide_button nav-toggle" href="#"><span></span></a>
-						</div> -->
+						<div class="col-md-6 col-sm-6 col-xs-6 text-right navicon social-icons">
+							<a href="https://twitter.com/climbcard"><i class="fa fa-twitter"></i></a>
+							<a href="https://facebook.com/climbcard"><i class="fa fa-facebook"></i></a>
+							<a href="https://www.instagram.com/climbcard/"><i class="fa fa-instagram"></i>
+						</a>
+						</div>
 					</div>
 					<div class="row hero-content">
 						<div class="col-md-12">
 							<h1 class="animated fadeInDown text-center">Hundreds of routes. One membership.</h1>
-							
+
 
 <!-- Begin MailChimp Signup Form -->
 
@@ -63,7 +66,13 @@
 				<div class="row">
 					<div class="col-md-12">
 						<h1>What is ClimbCard?</h1>
-						<p>Launching summer 2016, ClimbCard is a membership that gives you unlimited access to Toronto's best indoor climbing gyms.</p>
+						<p>Launching Spring 2016, ClimbCard is a membership that gives you unlimited access to Toronto’s best indoor climbing gyms. Whether you are new to climbing or a seasoned pro, you will never run out of new routes to challenge yourself with.</p>
+						<p>
+							Our network of climbing gyms has a wide array of bouldering, top-rope, and lead walls each with diverse and challenging routes. In addition, you get full access to the gyms amenities including change rooms, lockers, showers and lounge.
+						</p>
+						<p>
+							Follow us on FaceBook, Instagram and Twitter to get the latest ClimbCard Partner Gym announcements.
+						</p>
 					</div>
 				</div>
 			</div>
@@ -92,7 +101,7 @@
 							</div>
 							<div class="feature-content text-center">
 								<h1>Challenge yourself</h1>
-								<p>Already mastered one gym? ClimbCard ensures you will always have a new routes to climb.</p>
+								<p>Already mastered one gym? ClimbCard ensures you will always have a new route to climb.</p>
 							</div>
 						</div>
 					</div>
@@ -105,18 +114,18 @@
 							</div>
 							<div class="feature-content text-center">
 								<h1>One flat Fee</h1>
-								<p>Pay month-to-month and cancel anytime or you can put your membership on hold if an unforseen circumstance arises.</p>
+								<p>Pay month-to-month and cancel anytime. If an unforseen circumstance arises, you can always put your membership on hold until you return.</p>
 							</div>
 						</div>
 						<div class="col-md-6 feature-3 wp2 delay-1s">
 							<div class="text-center">
 								<div class="feature-icon">
-									<i class="fa fa-line-chart"></i>
+									<i class="fa fa-medkit"></i>
 								</div>
 							</div>
 							<div class="feature-content text-center">
-								<h1>Fitness Benefits</h1>
-								<p>Pay month-to-month and cancel anytime or you can put your membership on hold if an unforseen circumstance arises.</p>
+								<h1>Health</h1>
+								<p>Rock climbing is said to increases your strength, balance and flexibility while improving your risk-assessment and problem solving skills.</p>
 							</div>
 						</div>
 					</div>
@@ -194,19 +203,9 @@
 							</div>
 						</div>
 						<div class="col-md-6">
-							<h1>Showcase your Product or Service</h1>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed a lorem quis neque interdum consequat ut sed sem. Duis quis tempor nunc. Interdum et malesuada fames ac ante ipsum primis in faucibus.</p>
-							<blockquote class="team-quote">
-								<div class="avatar">
-									<%= image_tag "avatar.png", alt: "User Avatar" %>
-								</div>
-								<p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed a lorem quis neque interdum consequat ut sed sem. Duis quis tempor nunc." - Peter Finlan</p>
-								<div class="logo-quote">
-									<a href="http://tympanus.net/codrops/">
-										<%= image_tag "codrops-logo.png", alt: "Codrops Logo" %>
-									</a>
-								</div>
-							</blockquote>
+							<h1>ClimbCard is Fast, Easy, &amp; Convenient!</h1>
+							<p>Once enrolled as a ClimbCard member, you will recieve a digital membership card. Simply visit any of our partner gyms, present your ClimbCard and start climbing.</p>
+
 							<a href="http://tympanus.net/codrops/?p=22554" class="download-btn">Download! <i class="fa fa-download"></i></a>
 						</div>
 					</div>
@@ -365,9 +364,7 @@
 					</div>
 					<div class="col-md-7">
 						<ul class="footer-nav">
-							<li><a href="#about">Home</a></li>
-							<li><a href="#features">Partner</a></li>
-							<li><a href="#screenshots">Contact Us</a></li>
+							<li><a href="#features">Want to be Partner?</a></li>
 						</ul>
 					</div>
 				</div>
