--- a/app/assets/stylesheets/styles.css.scss
+++ b/app/assets/stylesheets/styles.css.scss
@@ -736,7 +736,8 @@ Features List
     margin:30px 0px;
     width: 90px;
     height: 90px;
-    border: solid 2px #4e9ba3;
+    border:solid 2px #C9D1C8;
+    // border: solid 2px #4e9ba3;
     border-radius: 50%;
     vertical-align: top;
     text-align: center;
@@ -962,7 +963,7 @@ footer ul {
     margin-top: 30px
 }
 footer li {
-    float: left;
+    float: right;
     margin-right: 15%;
     list-style: none;
     text-transform: uppercase;
