--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -64,15 +64,18 @@
 		<section class="climbcard-intro">
 			<div class="container">
 				<div class="row">
-					<div class="col-md-12">
+					<div class="col-md-6">
 						<h1>What is ClimbCard?</h1>
 						<p>Launching Spring 2016, ClimbCard is a membership that gives you unlimited access to Toronto’s best indoor climbing gyms. Whether you are new to climbing or a seasoned pro, you will never run out of new routes to challenge yourself with.</p>
 						<p>
 							Our network of climbing gyms has a wide array of bouldering, top-rope, and lead walls each with diverse and challenging routes. In addition, you get full access to the gyms amenities including change rooms, lockers, showers and lounge.
 						</p>
 						<p>
-							Follow us on FaceBook, Instagram and Twitter to get the latest ClimbCard Partner Gym announcements.
+							Follow us on <a href="https://facebook.com/climbcard"><span>FaceBook</span></a>, <a href="https://www.instagram.com/climbcard/"><span>Instagram</span></a> and <a href="https://twitter.com/climbcard"><span>Twitter</span></a> to get the latest ClimbCard Partner Gym announcements.
 						</p>
+					</div>
+					<div class="col-md-6 col-sm-6">
+						<%= image_tag "carabiner.jpg", class: "img-responsive", alt: "Carabiner" %>
 					</div>
 				</div>
 			</div>
@@ -330,8 +333,9 @@
 				</div>
 			</div>
 		</section> -->
-		<section class="download" id="download">
+		<section class="faq">
 			<div class="container">
+				<h1 class="section-title">Frequently asked questions</h1>
 				<div class="row">
 					<div class="col-md-6">
 						<h1>Are there any restrictions as to when I can climb?</h1>
