--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -64,26 +64,41 @@
 		<section class="climbcard-intro">
 			<div class="container">
 				<div class="row">
-					<div class="col-md-6">
+					<div class="col-md-7 col-md-offset-3">
 						<h1>What is ClimbCard?</h1>
-						<p>Launching Spring 2016, ClimbCard is a membership that gives you unlimited access to Toronto’s best indoor climbing gyms. Whether you are new to climbing or a seasoned pro, you will never run out of new routes to challenge yourself with.</p>
-						<p>
-							Our network of climbing gyms has a wide array of bouldering, top-rope, and lead walls each with diverse and challenging routes. In addition, you get full access to the gyms amenities including change rooms, lockers, showers and lounge.
-						</p>
-						<p>
-							Follow us on <a href="https://facebook.com/climbcard"><span>FaceBook</span></a>, <a href="https://www.instagram.com/climbcard/"><span>Instagram</span></a> and <a href="https://twitter.com/climbcard"><span>Twitter</span></a> to get the latest ClimbCard Partner Gym announcements.
-						</p>
-					</div>
-					<div class="col-md-6 col-sm-6">
-						<%= image_tag "carabiner.jpg", class: "img-responsive", alt: "Carabiner" %>
-					</div>
+							<p>Launching Spring 2016, ClimbCard is a membership that gives you unlimited access to Toronto’s best indoor climbing gyms. Whether you are new to climbing or a seasoned pro, you will never run out of new routes to challenge yourself with.</p>
+							<p>
+								Our network of climbing gyms has a wide array of bouldering, top-rope, and lead walls each with diverse and challenging routes. In addition, you get full access to the gyms amenities including change rooms, lockers, showers and lounge.
+							</p>
+							<p>
+								Follow us on <a href="https://facebook.com/climbcard"><span>FaceBook</span></a>, <a href="https://www.instagram.com/climbcard/"><span>Instagram</span></a> and <a href="https://twitter.com/climbcard"><span>Twitter</span></a> to get the latest ClimbCard Partner Gym announcements.
+							</p>
+						</div>
 				</div>
 			</div>
 		</section>
 
+		<!-- Start Your Climb -->
+	<section class="campaign">
+		<div class="campaign-wrap">
+		<div class="texture-overlay"></div>
+			<div class="container-fluid">
+				<div class="row">
+					<div class="col-md-12">
+						<div class="brand-hashtag text-center">
+							<h1>#startYourClimb</h1>
+						</div>
+					</div>	
+				</div>
+			</div>
+		</div>
+	</section>
 
-		<section class="features-list" id="features">
+
+		<section class="benefits-list">
 			<div class="container">
+				<h1 class="section-title">What We Offer</h1>
+				<p class="sub-section text-center">ClimbCard is working hard to streamline your climbing experience. From registration to point of entry, we want our members to spend more time enjoying amazing benefits and perks.</p>
 				<div class="row">
 						<div class="col-md-6 feature-1 wp2">
 							<div class="text-center">
@@ -93,7 +108,7 @@
 							</div>
 							<div class="feature-content text-center">
 								<h1>Unlimited Access</h1>
-								<p>ClimbCard gives you unlimited access to explore all of our partnered gyms, each with their own unique climbing experience.</p>
+								<p>Why stick to one gym when you can explore them all? ClimbCard gives you access to the largest network of climbing gyms each with their own unique experience.</p>
 							</div>
 						</div>
 						<div class="col-md-6 feature-2 wp2 delay-05s">
@@ -103,8 +118,8 @@
 								</div>
 							</div>
 							<div class="feature-content text-center">
-								<h1>Challenge yourself</h1>
-								<p>Already mastered one gym? ClimbCard ensures you will always have a new route to climb.</p>
+								<h1>No Restrictions</h1>
+								<p> Have you got what it takes to make it to the top? Practice as much as you want 7 days a week.</p>
 							</div>
 						</div>
 					</div>
@@ -116,8 +131,8 @@
 								</div>
 							</div>
 							<div class="feature-content text-center">
-								<h1>One flat Fee</h1>
-								<p>Pay month-to-month and cancel anytime. If an unforseen circumstance arises, you can always put your membership on hold until you return.</p>
+								<h1>One Flat Fee</h1>
+								<p>Pay month-to-month and cancel anytime. If an unforseen circumstance arises, you can always put your membership on hold.</p>
 							</div>
 						</div>
 						<div class="col-md-6 feature-3 wp2 delay-1s">
@@ -128,58 +143,13 @@
 							</div>
 							<div class="feature-content text-center">
 								<h1>Health</h1>
-								<p>Rock climbing is said to increases your strength, balance and flexibility while improving your risk-assessment and problem solving skills.</p>
+								<p>Climbing requires strength, mental toughness, and precision technique.</p>
 							</div>
 						</div>
 					</div>
 			</div>
 		</section>
 
-
-		<!-- <section class="video" id="about">
-			<div class="container">
-				<div class="row">
-					<div class="col-md-12 text-center">
-						<h1><a href="http://www.youtube.com/embed/9No-FiEInLA?autoplay=1&wmode=opaque&fs=1" class="youtube-media"><i class="fa fa-play-circle-o"></i> Watch the Video</a></h1>
-					</div>
-				</div>
-			</div>
-		</section> -->
-<!-- 		<section class="features-intro">
-			<div class="container-fluid">
-				<div class="row">
-					<div class="col-md-6 nopadding features-intro-img">
-						<div class="features-bg">
-							<div class="texture-overlay"></div>
-							<div class="features-img wp1">
-								<- %= image_tag "html5-logo.png", alt: "HTML5 Logo" %>
-							</div>
-						</div>
-					</div>
-					<div class="col-md-6 nopadding">
-						<div class="features-slider">
-								<ul class="slides" id="featuresSlider">
-									<li>
-										<h1>The Fore-front of Design &amp; Technology</h1>
-										<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed a lorem quis neque interdum consequat ut sed sem. Duis quis tempor nunc. Interdum et malesuada fames ac ante ipsum primis in faucibus.</p>
-										<p><a href="#features" class="arrow-btn">Find out why this freebie rocks! <i class="fa fa-long-arrow-right"></i></a></p>
-									</li>
-									<li>
-										<h1>Multi-Purpose User Centric Design</h1>
-										<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed a lorem quis neque interdum consequat ut sed sem. Duis quis tempor nunc. Interdum et malesuada fames ac ante ipsum primis in faucibus.</p>
-										<p><a href="http://tympanus.net/codrops/?p=22554" class="arrow-btn">Find out why this freebie rocks! <i class="fa fa-long-arrow-right"></i></a></p>
-									</li>
-									<li>
-										<h1>Made with Love, Released for Free</h1>
-										<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed a lorem quis neque interdum consequat ut sed sem. Duis quis tempor nunc. Interdum et malesuada fames ac ante ipsum primis in faucibus.</p>
-										<p><a href="http://tympanus.net/codrops/?p=22554" class="arrow-btn">Find out why this freebie rocks! <i class="fa fa-long-arrow-right"></i></a></p>
-									</li>
-								</ul>
-						</div>
-					</div>
-				</div>
-			</div>
-		</section> -->
 
 		<section class="showcase">
 			<div class="showcase-wrap">
@@ -190,17 +160,7 @@
 							<div class="device wp3">
 								<div class="device-content">
 									<div class="showcase-slider">
-										<ul class="slides" id="showcaseSlider">
-											<li>
-												<%= image_tag "screen1.jpg", alt: "Device Content Image" %>
-											</li>
-											<li>
-												<%= image_tag "screen2.jpg", alt: "Device Content Image" %>
-											</li>
-											<li>
-												<%= image_tag "screen3.jpg", alt: "Device Content Image" %>
-											</li>
-										</ul>
+										<%= image_tag "climbcard-wallet.jpg", alt: "Climbcard Wallet iOS" %>
 									</div>
 								</div>
 							</div>
@@ -208,14 +168,15 @@
 						<div class="col-md-6">
 							<h1>ClimbCard is Fast, Easy, &amp; Convenient!</h1>
 							<p>Once enrolled as a ClimbCard member, you will recieve a digital membership card. Simply visit any of our partner gyms, present your ClimbCard and start climbing.</p>
-
-							<a href="http://tympanus.net/codrops/?p=22554" class="download-btn">Download! <i class="fa fa-download"></i></a>
+							<div class="os-btn">
+								<i class="fa fa-apple"></i>Apple Wallet</div>
+							<div class="os-btn">
+								<i class="fa fa-google-wallet"></i>Google Wallet</div>
 						</div>
 					</div>
 				</div>
 			</div>
 		</section>
-
 
 <!-- 		<section class="screenshots" id="screenshots">
 			<div class="container-fluid">
@@ -362,9 +323,9 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-md-5">
-						<h1 class="footer-logo">
+						<div class="logo-wrap">
 							<%= image_tag "start-your-climb.png", class: "img-responsive", alt: "Start your climb" %>
-						</h1>
+						</div>
 					</div>
 					<div class="col-md-7">
 						<ul class="footer-nav">
