--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -98,7 +98,9 @@
 		<section class="benefits-list">
 			<div class="container">
 				<h1 class="section-title">What We Offer</h1>
-				<p class="sub-section text-center">ClimbCard is working hard to streamline your climbing experience. From registration to point of entry, we want our members to spend more time enjoying amazing benefits and perks.</p>
+				<div class="col-md-6 col-md-offset-3  text-center">
+				<p class="sub-section">ClimbCard is working hard to streamline your climbing experience. From registration to point of entry, we want our members to spend more time enjoying amazing benefits and perks.</p>
+				</div>
 				<div class="row">
 						<div class="col-md-6 feature-1 wp2">
 							<div class="text-center">
@@ -107,7 +109,7 @@
 								</div>
 							</div>
 							<div class="feature-content text-center">
-								<h1>Unlimited Access</h1>
+								<h1>Vast Network of Gyms</h1>
 								<p>Why stick to one gym when you can explore them all? ClimbCard gives you access to the largest network of climbing gyms each with their own unique experience.</p>
 							</div>
 						</div>
@@ -142,8 +144,8 @@
 								</div>
 							</div>
 							<div class="feature-content text-center">
-								<h1>Health</h1>
-								<p>Climbing requires strength, mental toughness, and precision technique.</p>
+								<h1>Health &amp; Wellness</h1>
+								<p>Climbing requires strength, mental toughness, and precision technique. Break out of your boring gym routine and bring your fitness to new heights!</p>
 							</div>
 						</div>
 					</div>
