--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -315,7 +315,7 @@
 						<p>No, rental equipment is not included in the membership. In order to get started we recommend purchasing a harness, climbing shoes and a chalk bag.</p>
 					</div>
 					<div class="col-md-6">
-						<h1>Does this include rental equipment?</h1>
+						<h1>Can I put my membership on hold?</h1>
 						<p>Certainly! We understand that you may need to take a break. Simply put your membership on hold and resume once you’re ready.</p>
 					</div>
 				</div>
