--- a/app/assets/stylesheets/styles.css.scss
+++ b/app/assets/stylesheets/styles.css.scss
@@ -587,15 +587,16 @@ Hero
 ========================================================================== */
 .hero {
     position: relative;
-    padding: 60px 0 60px 0;
+    padding: 30px 0 60px 0;
     min-height: 800px;
     background: rgb(40, 70, 102) no-repeat center center;
     background-image:image-url('hero-main.jpg'); 
     background-size: cover;
     color: #fff;
 }
+
 .hero h1 {
-    margin: 200px 0 45px 0;
+    margin: 230px 0 45px 0;
     font-weight: 300;
     font-size: 45px;
 }
@@ -614,6 +615,8 @@ Hero
 header i {
     margin-left: 5px
 }
+
+
 
 
 
@@ -773,7 +776,7 @@ Showcase
 ========================================================================== */
 .showcase {
     background: no-repeat center center fixed;
-    background-image: image-url('belay-wall.jpeg');
+    background-image: image-url('summit-climb.jpg');
     background-size: cover;
 }
 .showcase h1 {
