--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -28,32 +28,32 @@
 
 
 <!-- Begin MailChimp Signup Form -->
+<section class="user-subscribe">
+	<div id="mc_embed_signup">
+	<form action="//climbcard.us12.list-manage.com/subscribe/post?u=62b58dfeef74782cefec4dfcc&amp;id=894976712f" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate text-center" target="_blank" novalidate>
+	    <div id="mc_embed_signup_scroll">
+		
+	<div class="mc-field-group">
+		<input type="email" value="" name="EMAIL" class="required email form-control animated fadeInUp" id="mce-EMAIL" placeholder="Enter Email">
+	</div>
+	<div class="mc-field-group">
+		<input type="text" value="" name="PCODE" class="required postalCode form-control animated fadeInUp" id="mce-PCODE" placeholder="Postal Code">
+	</div>
 
-<div id="mc_embed_signup">
-<form action="//climbcard.us12.list-manage.com/subscribe/post?u=62b58dfeef74782cefec4dfcc&amp;id=894976712f" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate text-center" target="_blank" novalidate>
-    <div id="mc_embed_signup_scroll">
-	
-<div class="mc-field-group">
-	<input type="email" value="" name="EMAIL" class="required email form-control animated fadeInUp" id="mce-EMAIL" placeholder="Enter Email">
-</div>
-<div class="mc-field-group">
-	<input type="text" value="" name="PCODE" class="required postalCode form-control animated fadeInUp" id="mce-PCODE" placeholder="Postal Code">
-</div>
+	    <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_62b58dfeef74782cefec4dfcc_894976712f" tabindex="-1" value=""></div>
+	    <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button submit-to-mailchimp animated fadeInUp"></div>
+	    </div>
+	    	<div id="mce-responses" class="clear">
+			<div class="response" id="mce-error-response" style="display:none"></div>
+			<div class="response" id="mce-success-response" style="display:none"></div>
+		</div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+	</form>
+	</div>
+</section>
 
-    <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_62b58dfeef74782cefec4dfcc_894976712f" tabindex="-1" value=""></div>
-    <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button submit-to-mailchimp animated fadeInUp"></div>
-    </div>
-    	<div id="mce-responses" class="clear">
-		<div class="response" id="mce-error-response" style="display:none"></div>
-		<div class="response" id="mce-success-response" style="display:none"></div>
-	</div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-</form>
-</div>
 <script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script><script type='text/javascript'>(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';fnames[2]='PCODE';ftypes[2]='text';}(jQuery));var $mcj = jQuery.noConflict(true);</script>
 <!--End mc_embed_signup-->
 
-
-							<!-- <a href="http://tympanus.net/codrops/?p=22554" class="use-btn animated fadeInUp">Use it for free</a> <a href="#about" class="learn-btn animated fadeInUp">Learn more <i class="fa fa-arrow-down"></i></a> -->
 						</div>
 					</div>
 				</div>
@@ -180,122 +180,6 @@
 			</div>
 		</section>
 
-<!-- 		<section class="screenshots" id="screenshots">
-			<div class="container-fluid">
-				<div class="row">
-					<ul class="grid">
-						<li>
-							<figure>
-								< - %= image_tag "01-screenshot.jpg", alt: "Screenshot 01" %>
-								<figcaption>
-								<div class="caption-content">
-									<a href="img/large/01.jpg" class="single_image">
-										<i class="fa fa-search"></i><br>
-										<p>Optimised For Design</p>
-									</a>
-								</div>
-								</figcaption>
-							</figure>
-						</li>
-						<li>
-							<figure>
-								< - %= image_tag "02-screenshot.jpg", alt: "Screenshot 02" %>
-								<figcaption>
-								<div class="caption-content">
-									<a href="img/large/02.jpg" class="single_image">
-										<i class="fa fa-search"></i><br>
-										<p>User Centric Design</p>
-									</a>
-								</div>
-								</figcaption>
-							</figure>
-						</li>
-						<li>
-							<figure>
-								< - %= image_tag "03-screenshot.jpg", alt: "Screenshot 03" %>
-								<figcaption>
-								<div class="caption-content">
-									<a href="img/large/03.jpg" class="single_image">
-										<i class="fa fa-search"></i><br>
-										<p>Responsive and Adaptive</p>
-									</a>
-								</div>
-								</figcaption>
-							</figure>
-						</li>
-						<li>
-							<figure>
-								< - %= image_tag "04-screenshot.jpg", alt: "Screenshot 04" %>
-								<figcaption>
-								<div class="caption-content">
-									<a href="img/large/04.jpg" class="single_image">
-										<i class="fa fa-search"></i><br>
-										<p>Absolutely Free</p>
-									</a>
-								</div>
-								</figcaption>
-							</figure>
-						</li>
-					</ul>
-				</div>
-				<div class="row">
-					<ul class="grid">
-						<li>
-							<figure>
-								< - %= image_tag "05-screenshot.jpg", alt: "Screenshot 05" %>
-								<figcaption>
-								<div class="caption-content">
-									<a href="img/large/05.jpg" class="single_image">
-										<i class="fa fa-search"></i><br>
-										<p>Multi-Purpose Design</p>
-									</a>
-								</div>
-								</figcaption>
-							</figure>
-						</li>
-						<li>
-							<figure>
-								< - %= image_tag "06-screenshot.jpg", alt: "Screenshot 06" %>
-								<figcaption>
-								<div class="caption-content">
-									<a href="img/large/06.jpg" class="single_image">
-										<i class="fa fa-search"></i><br>
-										<p>Exclusive to Codrops</p>
-									</a>
-								</div>
-								</figcaption>
-							</figure>
-						</li>
-						<li>
-							<figure>
-								< - %= image_tag "07-screenshot.jpg", alt: "Screenshot 07" %>
-								<figcaption>
-								<div class="caption-content">
-									<a href="img/large/07.jpg" class="single_image">
-										<i class="fa fa-search"></i><br>
-										<p>Made with Love</p>
-									</a>
-								</div>
-								</figcaption>
-							</figure>
-						</li>
-						<li>
-							<figure>
-								< - %= image_tag "08-screenshot.jpg", alt: "Screenshot 08" %>
-								<figcaption>
-								<div class="caption-content">
-									<a href="img/large/08.jpg" class="single_image">
-										<i class="fa fa-search"></i><br>
-										<p>In Sydney, Australia</p>
-									</a>
-								</div>
-								</figcaption>
-							</figure>
-						</li>
-					</ul>
-				</div>
-			</div>
-		</section> -->
 		<section class="faq">
 			<div class="container">
 				<h1 class="section-title">Frequently asked questions</h1>
